# BinCryptor

./: CMakeLists.txt
BinCryptor/: BinCryptor.cpp  BinCryptor.h  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  FileTests.cpp
